--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.6",
     "@trendmicro/react-sidenav": "^0.4.5",
     "react": "^16.10.2",
+    "react-card-carousel": "0.0.10",
     "react-click-outside": "github:tj/react-click-outside",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
